# SlicerDRRRegistration

./: CMakeLists.txt  README.md
VertReg/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  qSlicerVertRegModule.cxx  qSlicerVertRegModule.h  qSlicerVertRegModule.xml  qSlicerVertRegModuleWidget.cxx  qSlicerVertRegModuleWidget.h
VertReg/Logic/: CMakeLists2.txt  vtkSlicerVertRegLogic.cxx  vtkSlicerVertRegLogic.h
VertReg/Resources/: qSlicerVertRegModule.qrc
VertReg/Resources/UI/: qSlicerVertRegFooBarWidget.ui  qSlicerVertRegModuleWidget.ui
VertReg/Widgets/: qSlicerVertRegFooBarWidget.cxx  qSlicerVertRegFooBarWidget.h
